# diesel-numeric-bug

./: Cargo.toml
migrations/2017-12-16-173626_create_users/: up.sql
src/: main.rs
