[package]
name = "diesel-numeric-bug"
version = "0.1.0"
authors = ["Leonardo Yvens <leoyvens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "968e7f79c", features = ["postgres", "numeric"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel", rev = "968e7f79c" }
serde = "1.0"
bigdecimal = "0.1"